CMS: There is insufficient memory with CMSSamplingGrain=1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b115
    • Verified

      runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java
      seen once on solaris sparc.


      # There is insufficient memory for the Java Runtime Environment to continue.
      # Native memory allocation (malloc) failed to allocate 6752305160 bytes for AllocateHeap
      # Possible reasons:
      # The system is out of physical RAM or swap space
      # In 32 bit mode, the process size limit was hit
      # Possible solutions:
      # Reduce memory load on the system
      # Increase physical memory or swap space
      # Check if swap backing store is full
      # Use 64 bit Java on a 64 bit OS
      # Decrease Java heap size (-Xmx/-Xms)
      # Decrease number of Java threads
      # Decrease Java thread stack sizes (-Xss)
      # Set larger code cache with -XX:ReservedCodeCacheSize=
      # This output file may be truncated or incomplete.
      #
      # INVALID (0xe0000001) at pc=0x0000000000000000, pid=14012, tid=2
      #
      # JRE version: (9.0) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-12-015109.amurillo.jdk9-hs-2015-12-11-snapshot, mixed mode, tiered, compressed oops, concurrent mark sweep gc, solaris-sparc)
      # Core dump will be written. Default location: /scratch/local/aurora/sandbox/results/workDir/runtime/CommandLine/OptionsValidation/TestOptionsWithRanges/core or core.14012
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:+UseConcMarkSweepGC -XX:CMSSamplingGrain=1 optionsvalidation.JVMOptionsUtils

      Host: slcaf486, Sparcv9 64 bit 2848 MHz, 64 cores, 127G, Oracle Solaris 11.1 SPARC
      Time: Sat Dec 12 20:56:30 2015 UTC elapsed time: 2 seconds (0d 0h 0m 2s)

      --------------- T H R E A D ---------------

      Current thread (0x000000010012a000): JavaThread "Unknown thread" [_thread_in_vm, id=2, stack(0xffffffff7cd00000,0xffffffff7ce00000)]

      Stack: [0xffffffff7cd00000,0xffffffff7ce00000], sp=0xffffffff7cdfec80, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1799c6c] void VMError::report_and_die(int,const char*,const char*,void*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long)+0x834
      V [libjvm.so+0x1799410] void VMError::report_and_die(Thread*,const char*,int,unsigned long,VMErrorType,const char*,void*)+0x38
      V [libjvm.so+0xb5f330] void report_vm_out_of_memory(const char*,int,unsigned long,VMErrorType,const char*,...)+0x68
      V [libjvm.so+0x70dcc8] char*AllocateHeap(unsigned long,MemoryType,const NativeCallStack&,AllocFailStrategy::AllocFailEnum)+0x88
      V [libjvm.so+0xb0d47c] CMSCollector::CMSCollector(ConcurrentMarkSweepGeneration*,CardTableRS*,ConcurrentMarkSweepPolicy*)+0xdc4
      V [libjvm.so+0xd48580] bool GenCollectedHeap::create_cms_collector()+0xd8
      V [libjvm.so+0xd45884] int GenCollectedHeap::initialize()+0x2e4
      V [libjvm.so+0x171fc74] int Universe::initialize_heap()+0x54
      V [libjvm.so+0x171f8ec] int universe_init()+0x84
      V [libjvm.so+0xe02500] int init_globals()+0xb8
      V [libjvm.so+0x16e43e0] int Threads::create_vm(JavaVMInitArgs*,bool*)+0x3d0
      V [libjvm.so+0xf719dc] int JNI_CreateJavaVM_inner(JavaVM_**,void**,void*)+0xdc
      C [libjli.so+0xacc4] InitializeJVM+0xfc
      C [libjli.so+0x9028] JavaMain+0x70
      C [libc.so.1+0xe24c4] _lwp_start+0x8

            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Dmitry Fazunenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: