8145312: CMS: There is insufficient memory with CMSSamplingGrain=1

Change minimum range and add constraint function for CMSSamplingGrain flag

Reviewed-by: jmasa, ddmitriev